2011-01-01  Jim Larus  <jim@linuxPC>

	* Setup/qtspim_debian_deployment, bin/release-debian, QtSpim/menu.cpp:
	Create debian package.

2010-12-30    <Jim@X64PC>

	* Moved SVN repository to SourceForge in preperation for hosting
	entire project at that site.

2010-12-30    <Jim@LS-RED>

	* PCSpim/PCSpimView.cpp [Lyosha Blinnikov <nookkin@gmail.com>]:
	Incorrectly parse file names containing spaces.

2010-12-29    <Jim@LS-RED>

	* PCSpim/pcspim.rc [Hauerwas, Adam <HAUERWAS@providence.edu>]:
	Field label did not fit string.

2010-11-26    <Jim@LS-RED>

	* QtSpim/help:
	Added Appendix A of Patterson & Hennessey as help file.

2010-11-21    <Jim@LS-RED>

	* QtSpim/menu.cpp, QtSpim/help:
	Added help file.

2010-11-05    <Jim@LS-RED>

	* QtSpim/regwin.cpp, QtSpim/QtSpim.pro, QtSpim/regtextedit.h,
	QtSpim/spimview.cpp, QtSpim/spimview.ui Mitko <asdfgga12@gmail.com>:
	Add right click to set register values.

2010-10-23    <Jim@LS-RED>

	* CPU/inst.c, CPU/inst.h, CPU/mem.c, CPU/run.c,
	QtSpim/datatextedit.h, QtSpim/datawin.cpp, QtSpim/menu.cpp,
	QtSpim/spim_support.c, QtSpim/spimview.cpp, QtSpim/spimview.h,
	QtSpim/spimview.ui, QtSpim/textwin.cpp, QtSpm/windows_images.qrc:
	Fixed debugger functionality by adding pause button.
	Sped up formating of data segments.
	Improved error messages.

2010-10-10    <Jim@LS-RED>

	* CPU/run.c, QtSpim/QtSpim.pro, QtSpim/README, QtSpim/spim_support.c, QtSpim/textwin.cpp
	Chris Van Horne <cwvh@email.arizona.edu>:
	Changes for Mac.

	* xspim/xspim.c, xspim/buttons.c:
	New internal interface.

	* PCSpim/PCSpimView.cpp:
	New internal interface.

	* spim/spim.c:
	New internal interface.

	* QtSpim/menu.cpp, QtSpim/spimview.ui:
	Improved handling of run/stop/single-step.

	* CPU/spim-utils.c, CPU/spim-utils.h CPU/spim.h:
	Simplify code for running a program.

2010-10-02    <Jim@LS-RED>

	* QtSpim/menu.cpp (executeProgram) Alexander Williams <proflogic@gmail.com>:
	Single step go hung up at breakpoint.

2010-09-18    <Jim@LS-RED>
